k8s/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    istio-injection: enabled
    istio.io/rev: asm-managed-stable
spec: {}
status: {}
