k8s/demo/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ui-virtual-service
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/public-gateway
  http:
  - name: gateway-to-ui
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demo.demo.svc.cluster.local
